<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="settings_fragment_favourites">Избранное</string>
    <string name="settings_fragment_shop">Магазин</string>
    <string name="settings_fragment_feedback">Обратная связь</string>
    <string name="settings_fragment_return_product">Возврат товара</string>
    <string name="settings_fragment_return_offer">Оферта</string>
    <string name="settings_fragment_exit">Выход</string>


    <string name="settings_fragment_product_1">%1$d товар</string>
    <string name="settings_fragment_product_2">%1$d товара</string>
    <string name="settings_fragment_product_3">%1$d товаров</string>

</resources>